--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p>Email: <strong>prathameshShinde@gmail.com</strong></p>
         <p>Phone:
             <a href="7820915392">
-                <strong></strong>
+                <strong>7820915392</strong>
             </a>
         </p>
     </footer>
